# ComfyUI-Qwen-Prompt-Expander

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  qwen_node.py  requirements.txt
.github/workflows/: publish.yaml  publish.yml
web/docs/: QwenPromptExpander.md
