[project]
name = "comfyui-qwen-prompt-expander"
description = "Local AI prompt generator using Qwen/SmolLM2 models. 100% offline and private."
version = "1.1.0"
license = { text = "MIT" }

authors = [
    { name = "AnonBOTpl" }
]

requires-python = ">=3.8"

dependencies = [
    "sentencepiece",
    "sacremoses",
    "accelerate",
    "bitsandbytes>=0.43.1"
]

[project.urls]
Repository = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander"
Homepage = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander"

[tool.comfy]
PublisherId = "anonbotpl"
DisplayName = "Qwen Prompt Expander"
Icon = ""
