[project]
name = "qwen-prompt-expander"
description = "Local AI prompt generator using Qwen/SmolLM2 models. 100% offline and private. Supports 4-bit/8-bit quantization. Runs on 6GB VRAM GPUs alongside Stable Diffusion. Smart token management, Polish-English translation, embedding support, OOM protection."
version = "1.0.1"
license = { file = "LICENSE" }

dependencies = [
    "sentencepiece",
    "sacremoses",
    "accelerate",
    "bitsandbytes>=0.43.1"
]

[project.urls]
Repository = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander"
Documentation = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander/wiki"
"Bug Tracker" = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander/issues"

[tool.comfy]
publisher = "anonbotpl"
display_name = "ComfyUI-Qwen-Prompt-Expander"
icon = ""
includes = []
