[project]
name = "comfyui-qwen-prompt-expander"
version = "1.1.0"
description = "Local AI prompt generator using Qwen/SmolLM2 models. 100% offline and private."
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "sentencepiece",
    "sacremoses",
    "accelerate",
    "bitsandbytes>=0.43.1"
]

[project.urls]
Repository = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander"
Documentation = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander"
"Bug Tracker" = "https://github.com/AnonBOTpl/ComfyUI-Qwen-Prompt-Expander/issues"

[tool.comfy]
PublisherId = "anonbotpl"
DisplayName = "Qwen Prompt Expander"
Icon = ""
